# annoterm

./: .gitignore  README.md  main.py  pyproject.toml
.annoterm/bundle/: label_set.json  manifest.json
annoterm/: __init__.py  cli.py  models.py
annoterm/annotations/: __init__.py  io.py  model.py  transfer.py
annoterm/data/: __init__.py  base.py  csv_adapter.py  factory.py  hf_adapter.py  identity.py  jsonl_adapter.py
annoterm/filters/: __init__.py  eval.py  parser.py
annoterm/ui/: __init__.py  app.py
tests/: test_adapters.py  test_annotation_store.py  test_cli_bundle_inspect.py  test_cli_home.py  test_cli_paths.py  test_filters.py  test_identity.py  test_path_completion.py  test_transfer.py  test_ui_filter_input.py  test_ui_inspect.py  test_ui_interactions.py
