[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annoterm"
version = "0.1.1"
description = "Keyboard-first TUI for viewing and annotating tabular data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "orjson>=3.11.7",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "textual>=8.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]

[project.scripts]
annoterm = "annoterm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
annoterm = { workspace = true }

[dependency-groups]
dev = [
    "annoterm",
]
